--- a/style.css
+++ b/style.css
@@ -52,15 +52,41 @@ main{
   margin: 15px 0 5px;
 }
 
-.main-text2 {
+.main-text2{
   position: absolute;
   top: 0;
   left: 0;
-  background-color: #ff9a4b;
-  color: #fff;
+  background-color: #FF9A4B;
+  color: #FFFFFF;
 }
 
 footer{
   height: 50px;
   background-color: #AAAAAA;
+}
+
+@media screen and (max-width: 425px){
+
+  header{
+    width: 100%;
+  }
+
+  main{
+    width: 100%;
+    display: block;
+  }
+
+  .main-item{
+    width: 90%;
+    margin: 0 auto 20px;
+  }
+
+  .main-item:last-child {
+    margin: 0 auto;
+  }
+
+  footer{
+    width: 100%;
+  }
+
 }
